--- a/index.css
+++ b/index.css
@@ -1,55 +1,144 @@
+* {
+    box-sizing: border-box;
+}
 html, body {
     margin: 0;
     padding: 0;
-    font-family: sans-serif;
-    background: #334;
+    font-family: 'Poppins', sans-serif;
 }
-.user-card {
+body {
+    min-width: 900px;
+    line-height: 1.5;
+}
+main {
+    width: 900px;
+    margin: 0 auto;
+}
+a {
+    color: inherit;
+    text-decoration: none;
+}
+.icon {
+    font-size: 32px;
+}
+
+/* Navbar */
+.navbar {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    width: 800px;
+    margin: 0 auto;
+}
+.logo {
     display: flex;
     align-items: center;
-    border: 1px solid #ccc;
+}
+.logo-text {
+    margin-left: 5px;
+}
+.nav-link {
+    margin: 5px;
     padding: 10px;
-    margin: 10px;
-    border-radius: 8px;
-    background-color: #f9f9f9;
-    max-width: 300px;
-    box-shadow: rgba(0, 0, 0, 0.15) 1.95px 1.95px 2.6px;
-    color: #334;
+    font-size: 16px;
 }
-.profile-pic {
-    width: 50px;
-    height: 50px;
-    border-radius: 50%;
-    margin-right: 15px;
-    object-fit: cover;
-    border: 1px solid #334;
+.nav-links {
+    display: flex;
 }
-.user-info h3 {
+
+/* Hero Section */
+.hero-section {
+    position: relative;
+    width: 800px;
+    margin: 120px auto 200px;
+}
+.hero-heading {
+    font-size: 80px;
+    font-weight: 700;
     margin: 0;
 }
-.status {
-    display: inline-flex;
+.hero-heading span {
+    color: #007000;
+    font-weight: 700;
+    line-height: 1;
+}
+.hero-text {
+    font-size: 20px;
+    max-width: 300px;
+    margin-bottom: 30px;
+}
+.hero-image {
+    max-width: 350px;
+    position: absolute;
+    right: -20px;
+    top: -50px;
+    z-index: -1;
+}
+.hero-link {
+    border: 2px solid #333333;
+    padding: 8px 20px;
+    border-radius: 40px;
+    width: 100px;
+}
+
+/* About Section */
+.about-section {
+    background-image: url(images/clouds.jpg);
+    background-size: cover;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    width: 700px;
+    margin: 0 auto;
+    padding: 40px;
+    border: 2px solid #333333;
+}
+.about-heading {
+    margin: 0;
+    font-size: 48px;
+}
+.about span {
+    color: #007000;
+}
+.about-link {
+    margin-top: 30px;
+    margin-bottom: 30px;
+}
+.about a {
+    border: 2px solid #333333;
+    padding: 8px 20px;
+    border-radius: 40px;
+}
+
+/* Footer */
+.footer {
+    background-color: #333333;
+    margin-top: 100px;
+}
+.social-links {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    margin: 0 auto;
+    padding: 20px 40px;
+    width: 800px;
+    color: #ffffff;
+}
+.social-links p {
+    display: inline;
+    font-size: 16px;
+}
+.social-links ion-icon {
+    padding-right: 10px;
+}
+.social-link {
+    display: flex;
     align-items: center;
 }
-.status .indicator {
-    width: 25px;
-    height: 25px;
-    background-color: green;
-    border-radius: 50%;
-    margin-right: 5px;
-    color: white;
-    position: relative;
-}
-.status .online {
-    background-color: green;
-}
-.status .offline {
-    background-color: red;
-    font-weight: bold;
-}
-.status .indicator span {
-    content: '';
-    position: absolute;
-    top: 4px;
-    left: 7px;
-}
+
+/* 
+Challenge:
+1. Identify any elements on the page where the text contrast is poor.
+2. Change those elements according to the AAA requirements.
+3. Google 'background-blend-mode' and see if you can figure out how to make the background image brighter.
+*/
