--- a/index.css
+++ b/index.css
@@ -1,144 +1,99 @@
-* {
-    box-sizing: border-box;
-}
 html, body {
     margin: 0;
     padding: 0;
     font-family: 'Poppins', sans-serif;
 }
-body {
-    min-width: 900px;
-    line-height: 1.5;
-}
 main {
     width: 900px;
-    margin: 0 auto;
+    margin: 0 auto 50px;
+    line-height: 1.5;
+    color: #333333;
+}
+strong {
+    color: #0907a4;
 }
 a {
-    color: inherit;
+    color: #0907a4;
     text-decoration: none;
-}
-.icon {
-    font-size: 32px;
-}
-
-/* Navbar */
-.navbar {
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
-    width: 800px;
-    margin: 0 auto;
-}
-.logo {
-    display: flex;
-    align-items: center;
-}
-.logo-text {
-    margin-left: 5px;
-}
-.nav-link {
-    margin: 5px;
-    padding: 10px;
-    font-size: 16px;
-}
-.nav-links {
-    display: flex;
+    text-decoration-color: #d172cb;
 }
 
 /* Hero Section */
 .hero-section {
+    text-align: center;
     position: relative;
-    width: 800px;
-    margin: 120px auto 200px;
+    height: 100vh;
 }
 .hero-heading {
-    font-size: 80px;
-    font-weight: 700;
-    margin: 0;
-}
-.hero-heading span {
-    color: #007000;
-    font-weight: 700;
-    line-height: 1;
+    font-size: 96px;
+    color: #0907a4;
 }
 .hero-text {
     font-size: 20px;
-    max-width: 300px;
-    margin-bottom: 30px;
+    color: #333333;
+    position: absolute;
+    width: 260px;
+    right: 0;
+    top: 260px;
 }
 .hero-image {
-    max-width: 350px;
+    width: 400px;
+    z-index: 10;
     position: absolute;
-    right: -20px;
+    left: 250px;
     top: -50px;
-    z-index: -1;
-}
-.hero-link {
-    border: 2px solid #333333;
-    padding: 8px 20px;
-    border-radius: 40px;
-    width: 100px;
 }
 
-/* About Section */
-.about-section {
-    background-image: url(images/clouds.jpg);
-    background-size: cover;
+/* Main Content */
+.astronaut-section, .chair-section, .cubes-section {
     display: flex;
-    justify-content: center;
+    justify-content: flex-end;
     align-items: center;
-    width: 700px;
-    margin: 0 auto;
+}
+.astronaut-section p, .chair-section p, .cubes-section p {
+    width: 340px;
+}
+.astronaut-section p, .cubes-section p {
+    text-align: right;
+}
+.chair-section {
+    flex-direction: row-reverse;
+}
+.image {
+    width: 400px;
     padding: 40px;
-    border: 2px solid #333333;
-}
-.about-heading {
-    margin: 0;
-    font-size: 48px;
-}
-.about span {
-    color: #007000;
-}
-.about-link {
-    margin-top: 30px;
-    margin-bottom: 30px;
-}
-.about a {
-    border: 2px solid #333333;
-    padding: 8px 20px;
-    border-radius: 40px;
 }
 
-/* Footer */
-.footer {
-    background-color: #333333;
-    margin-top: 100px;
+.card {
+    position: relative;
+    border: 2px solid #333333;
+    margin-bottom: 40px;
+    border-radius: 40px 0 40px 0;
+    outline-offset: 2px;
+		transition: 0.2s;
 }
-.social-links {
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
-    margin: 0 auto;
-    padding: 20px 40px;
-    width: 800px;
-    color: #ffffff;
+.card a::after {
+    content: '';
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    z-index: 1;
 }
-.social-links p {
-    display: inline;
-    font-size: 16px;
+.card:hover {
+    box-shadow: rgba(0, 0, 0, 0.4) 0px 2px 4px, rgba(0, 0, 0, 0.3) 0px 7px 13px -3px, rgb(208,114,202) 0px -3px 0px inset;
 }
-.social-links ion-icon {
-    padding-right: 10px;
+.cta {
+    display: block;
+    padding-top: 20px;
 }
-.social-link {
-    display: flex;
-    align-items: center;
+.card:focus-within {
+    outline: 2px solid blue;
 }
 
 /* 
-Challenge:
-1. Identify any elements on the page where the text contrast is poor.
-2. Change those elements according to the AAA requirements.
-3. Google 'background-blend-mode' and see if you can figure out how to make the background image brighter.
+Challenge: Update our links so that they meet the following requirements:
+1. They can be identified as links by more than just color.
+2. The link text is not ambiguous, as in the links make sense out of context.
 */
