--- a/index.css
+++ b/index.css
@@ -1,99 +1,194 @@
+* {
+    box-sizing: border-box;
+}
 html, body {
     margin: 0;
     padding: 0;
     font-family: 'Poppins', sans-serif;
 }
-main {
-    width: 900px;
-    margin: 0 auto 50px;
+body {
+    min-width: 900px;
     line-height: 1.5;
     color: #333333;
 }
-strong {
-    color: #0907a4;
+main {
+    width: 900px;
+    margin: 0 auto;
 }
 a {
-    color: #0907a4;
+    color: inherit;
     text-decoration: none;
-    text-decoration-color: #d172cb;
+}
+.icon {
+    font-size: 32px;
+}
+
+/* Navbar */
+.navbar {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    width: 800px;
+    margin: 0 auto;
+}
+.logo {
+    display: flex;
+    align-items: center;
+}
+.logo-text {
+    margin-left: 5px;
+}
+.nav-link {
+    margin: 5px;
+    padding: 10px;
+    font-size: 16px;
+}
+.nav-links {
+    display: flex;
 }
 
 /* Hero Section */
 .hero-section {
-    text-align: center;
     position: relative;
-    height: 100vh;
+    width: 800px;
+    margin: 120px auto 200px;
 }
 .hero-heading {
-    font-size: 96px;
-    color: #0907a4;
+    font-size: 80px;
+    font-weight: 700;
+    margin: 0;
+}
+.hero-heading span {
+    color: #007000;
+    font-weight: 700;
+    line-height: 1;
 }
 .hero-text {
     font-size: 20px;
-    color: #333333;
-    position: absolute;
-    width: 260px;
-    right: 0;
-    top: 260px;
+    max-width: 300px;
+    margin-bottom: 30px;
 }
 .hero-image {
-    width: 400px;
-    z-index: 10;
+    max-width: 350px;
     position: absolute;
-    left: 250px;
+    right: -20px;
     top: -50px;
+    z-index: -1;
 }
-
-/* Main Content */
-.astronaut-section, .chair-section, .cubes-section {
-    display: flex;
-    justify-content: flex-end;
-    align-items: center;
-}
-.astronaut-section p, .chair-section p, .cubes-section p {
-    width: 340px;
-}
-.astronaut-section p, .cubes-section p {
-    text-align: right;
-}
-.chair-section {
-    flex-direction: row-reverse;
-}
-.image {
-    width: 400px;
-    padding: 40px;
-}
-
-.card {
-    position: relative;
+.hero-link {
     border: 2px solid #333333;
-    margin-bottom: 40px;
-    border-radius: 40px 0 40px 0;
-    outline-offset: 2px;
-		transition: 0.2s;
+    padding: 8px 20px;
+    border-radius: 40px;
+    width: 100px;
 }
-.card a::after {
-    content: '';
-    position: absolute;
-    top: 0;
-    left: 0;
+
+/* Info Section */
+.info-section {
+    margin: 250px auto;
+    width: 800px;
+}
+.info {
+    margin-left: 200px;
+}
+.info-heading {
+    font-size: 48px;
+    margin: 0;
+}
+.info a {
+    color: #007000;
+    text-decoration: underline;
+}
+.statistics {
+    width: 620px;
     width: 100%;
-    height: 100%;
-    z-index: 1;
+    position: relative;
+    background-color: #333333;
+    display: flex;
+    justify-content: space-around;
+    align-items: center;
+    padding: 10px 30px;
 }
-.card:hover {
-    box-shadow: rgba(0, 0, 0, 0.4) 0px 2px 4px, rgba(0, 0, 0, 0.3) 0px 7px 13px -3px, rgb(208,114,202) 0px -3px 0px inset;
+.info-image {
+    position: absolute;
+    left: -30px;
+    top: -170px;
+    max-width: 200px;
 }
-.cta {
-    display: block;
-    padding-top: 20px;
+.stat-heading {
+    color: #cccccc;
+    font-size: 20px;
+    font-weight: 500;
+    margin-bottom: 0;
 }
-.card:focus-within {
-    outline: 2px solid blue;
+.stat-number {
+    font-size: 40px;
+    font-weight: 500;
+    margin-top: 0;
+    margin-bottom: 20px;
+}
+.stat p {
+    color: #ffffff;
+}
+
+/* About Section */
+.about-section {
+    background-color: rgba(255, 255, 255, 0.85);
+    background-blend-mode: lighten;
+    background-image: url(images/clouds.jpg);
+    background-size: cover;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    width: 700px;
+    margin: 0 auto;
+    padding: 40px;
+    border: 2px solid #333333;
+}
+.about-heading {
+    margin: 0;
+    font-size: 48px;
+}
+.about span {
+    color: #007000;
+}
+.about-link {
+    margin-top: 30px;
+    margin-bottom: 30px;
+}
+.about a {
+    border: 2px solid #333333;
+    padding: 8px 20px;
+    border-radius: 40px;
+}
+
+/* Footer */
+.footer {
+    background-color: #333333;
+    margin-top: 100px;
+}
+.social-links {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    margin: 0 auto;
+    padding: 20px 40px;
+    width: 800px;
+    color: #ffffff;
+}
+.social-links p {
+    display: inline;
+    font-size: 16px;
+}
+.social-links ion-icon {
+    padding-right: 10px;
+}
+.social-link {
+    display: flex;
+    align-items: center;
 }
 
 /* 
-Challenge: Update our links so that they meet the following requirements:
-1. They can be identified as links by more than just color.
-2. The link text is not ambiguous, as in the links make sense out of context.
+Challenges:
+1. Update our images so that they have appropriate alternative texts.
+2. Update any links that are either not recognizable as links or have ambiguous text.
 */
