--- a/index.css
+++ b/index.css
@@ -1,194 +1,88 @@
-* {
-    box-sizing: border-box;
-}
 html, body {
     margin: 0;
     padding: 0;
+}
+body, .contact-input, .address-input, .radio-container p {
     font-family: 'Poppins', sans-serif;
 }
-body {
-    min-width: 900px;
-    line-height: 1.5;
-    color: #333333;
-}
-main {
-    width: 900px;
-    margin: 0 auto;
-}
-a {
-    color: inherit;
-    text-decoration: none;
-}
-.icon {
-    font-size: 32px;
-}
-
-/* Navbar */
-.navbar {
+.contact-page {
     display: flex;
+    flex-direction: column;
     justify-content: space-between;
-    align-items: center;
+    min-height: 100vh;
+}
+.contact-form-section {
+    display: flex;
     width: 800px;
+    padding: 30px;
     margin: 0 auto;
 }
-.logo {
-    display: flex;
-    align-items: center;
+.contact-image {
+    width: 400px;
+    object-fit: contain;
+    margin-left: 60px;
 }
-.logo-text {
-    margin-left: 5px;
-}
-.nav-link {
-    margin: 5px;
-    padding: 10px;
-    font-size: 16px;
-}
-.nav-links {
-    display: flex;
-}
-
-/* Hero Section */
-.hero-section {
-    position: relative;
-    width: 800px;
-    margin: 120px auto 200px;
-}
-.hero-heading {
-    font-size: 80px;
-    font-weight: 700;
+.contact-form-heading {
+    font-size: 3rem;
     margin: 0;
 }
-.hero-heading span {
-    color: #007000;
-    font-weight: 700;
-    line-height: 1;
-}
-.hero-text {
-    font-size: 20px;
-    max-width: 300px;
-    margin-bottom: 30px;
-}
-.hero-image {
-    max-width: 350px;
-    position: absolute;
-    right: -20px;
-    top: -50px;
-    z-index: -1;
-}
-.hero-link {
-    border: 2px solid #333333;
-    padding: 8px 20px;
-    border-radius: 40px;
-    width: 100px;
-}
-
-/* Info Section */
-.info-section {
-    margin: 250px auto;
-    width: 800px;
-}
-.info {
-    margin-left: 200px;
-}
-.info-heading {
-    font-size: 48px;
-    margin: 0;
-}
-.info a {
-    color: #007000;
-    text-decoration: underline;
-}
-.statistics {
-    width: 620px;
-    width: 100%;
-    position: relative;
-    background-color: #333333;
-    display: flex;
-    justify-content: space-around;
-    align-items: center;
-    padding: 10px 30px;
-}
-.info-image {
-    position: absolute;
-    left: -30px;
-    top: -170px;
-    max-width: 200px;
-}
-.stat-heading {
-    color: #cccccc;
-    font-size: 20px;
-    font-weight: 500;
-    margin-bottom: 0;
-}
-.stat-number {
-    font-size: 40px;
-    font-weight: 500;
-    margin-top: 0;
+.contact-form-intro {
+    font-size: 1.25rem;
     margin-bottom: 20px;
 }
-.stat p {
-    color: #ffffff;
-}
-
-/* About Section */
-.about-section {
-    background-color: rgba(255, 255, 255, 0.85);
-    background-blend-mode: lighten;
-    background-image: url(images/clouds.jpg);
-    background-size: cover;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    width: 700px;
-    margin: 0 auto;
-    padding: 40px;
+.contact-input {
+    display: block;
+    width: 300px;
+    margin: 5px auto 15px;
+    border-radius: 20px;
+    padding: 8px 20px;
+    font-size: 1rem;
     border: 2px solid #333333;
 }
-.about-heading {
-    margin: 0;
-    font-size: 48px;
+.contact-textarea {
+    max-width: 300px;
+    padding: 16px 20px;
+    border: 2px solid #333333;
 }
-.about span {
-    color: #007000;
+.contact-input::-webkit-input-placeholder, .address-input::-webkit-input-placeholder {
+    color: #555555;
 }
-.about-link {
-    margin-top: 30px;
-    margin-bottom: 30px;
-}
-.about a {
+.contact-submit-button {
     border: 2px solid #333333;
     padding: 8px 20px;
     border-radius: 40px;
+    margin: 10px auto 0;
+    min-width: 120px;
 }
-
-/* Footer */
-.footer {
-    background-color: #333333;
-    margin-top: 100px;
+.contact-submit-button:hover {
+    background-color: #dddddd;
+    cursor: pointer;
 }
-.social-links {
+.address {
     display: flex;
-    justify-content: space-between;
-    align-items: center;
-    margin: 0 auto;
-    padding: 20px 40px;
-    width: 800px;
-    color: #ffffff;
 }
-.social-links p {
-    display: inline;
-    font-size: 16px;
+.address-input {
+    width: 110px;
+    margin: 5px auto 10px;
+    border-radius: 20px;
+    padding: 8px 20px;
+    font-size: 1rem;
+    border: 2px solid #333333;
 }
-.social-links ion-icon {
-    padding-right: 10px;
+.postcode {
+    margin-left: 40px;
 }
-.social-link {
-    display: flex;
-    align-items: center;
+.contact-radio {
+    margin-right: 20px;
+    margin-bottom: 10px;
+}
+.radio-container p {
+    margin-bottom: 10px;
 }
 
 /* 
-Challenges:
-1. Update our images so that they have appropriate alternative texts.
-2. Update any links that are either not recognizable as links or have ambiguous text.
+Challenge:
+1. Add an id attribute to each input field. (You are going to need it, *hint hint*)
+2. Add labels for each input field in the form. Look up how to associate a label with an input field so that when clicking the label, the input field gets focused.
+3. Change the placeholder names to be exemplary user inputs, i.e. "Obama" for a surname field.
 */
