--- a/index.css
+++ b/index.css
@@ -19,6 +19,9 @@ a {
     color: inherit;
     text-decoration: none;
 }
+ul {
+    list-style-type: none;
+}
 .icon {
     font-size: 32px;
 }
@@ -84,7 +87,7 @@ a {
 
 /* Info Section */
 .info-section {
-    margin: 250px auto;
+    margin: 250px auto 200px;
     width: 800px;
 }
 .info {
@@ -185,7 +188,7 @@ a {
 	font-family: 'Poppins', sans-serif;
 }
 .input::-webkit-input-placeholder {
-    color: #aaaaaa;
+    color: #555555;
 }
 .submit-button {
     border: 2px solid #333333;
@@ -228,7 +231,8 @@ a {
 
 /* 
 Challenge:
-1. Add labels for each input field in the form.
-2. Change the placeholder names to be as accessible and helpful as possible (hint: also make sure the text color contrast is good enough).
-3. Update the button text to be less ambiguous.
+1. Identify any connected consecutive items. Hint: There are multiple sections on our home page that should become 'lists'.
+2. Update the sections to be unordered lists.
+3. Wrap each item with a list item tag.
+4. Finally, add the necessary CSS to maintain the style of the sections.
 */
