--- a/index.css
+++ b/index.css
@@ -23,7 +23,7 @@ ul {
     list-style-type: none;
 }
 .icon {
-    font-size: 32px;
+    font-size: 2rem;
 }
 
 /* Navbar */
@@ -230,9 +230,10 @@ ul {
 }
 
 /* 
-Challenge:
-1. Identify any connected consecutive items. Hint: There are multiple sections on our home page that should become 'lists'.
-2. Update the sections to be unordered lists.
-3. Wrap each item with a list item tag.
-4. Finally, add the necessary CSS to maintain the style of the sections.
+Challenge: Change all font-size properties from px to rem.
+
+Here's some helpful conversions for default settings:
+1rem = 16px.
+1.5rem = 24px.
+2rem = 32px.
 */
